# PanAi

./: .gitignore  README.md
crack_scanner/src/: laser_extraction.py  laser_power.py  main.py  profile_stack.py  serial_receiver.py  storage.py  sync_and_package.py  triangulation.py  visualization.py
crack_scanner/src/calibration/: calibrate_camera.py  calibrate_laser_plane.py
panai_ws/docker/: Dockerfile  docker-compose.yml
panai_ws/src/panai_acoustic_bridge/: package.xml  setup.cfg  setup.py
panai_ws/src/panai_acoustic_bridge/panai_acoustic_bridge/: acoustic_bridge_node.py  protocol.py
panai_ws/src/panai_acoustic_bridge/panai_acoustic_bridge/test/: mock_esp32.py
panai_ws/src/panai_acoustic_bridge/resource/: panai_acoustic_bridge
panai_ws/src/panai_description/: CMakeLists.txt  package.xml
panai_ws/src/panai_description/launch/: rsp.launch.py
panai_ws/src/panai_description/urdf/: panai_robot.urdf.xacro
panai_ws/src/panai_msgs/: CMakeLists.txt  package.xml
panai_ws/src/panai_msgs/msg/: AcousticSpectrum.msg  DepthProfile.msg  EnvironmentSample.msg  FrameMeta.msg  HeightEstimate.msg  SessionState.msg
panai_ws/src/panai_msgs/srv/: StartSession.srv  TriggerStrike.srv
panai_ws/src/panai_odometry/: package.xml  setup.cfg  setup.py
panai_ws/src/panai_odometry/panai_odometry/: odometry_node.py
panai_ws/src/panai_orchestrator/: package.xml  setup.cfg  setup.py
panai_ws/src/panai_orchestrator/panai_orchestrator/: orchestrator_node.py
panai_ws/src/panai_sim/: CMakeLists.txt  package.xml
panai_ws/src/panai_sim/launch/: sim.launch.py
panai_ws/src/panai_vision/: package.xml  setup.cfg  setup.py
panai_ws/src/panai_vision/panai_vision/: vision_node.py
panai_ws/src/panai_vision/panai_vision/crack_scanner/: .gitignore  README.md  requirements.txt
panai_ws/src/panai_vision/panai_vision/crack_scanner/calib/: camera_intrinsics.yaml  laser_plane.yaml
panai_ws/src/panai_vision/panai_vision/crack_scanner/config/: config.yaml
panai_ws/src/panai_vision/panai_vision/crack_scanner/src/: capture.py  config.py  laser_extraction.py  main.py  profile_stack.py  storage.py  sync_and_package.py  triangulation.py
percussion-acoustic/: platformio.ini
percussion-acoustic/dataset_collector/: .gitignore  README.md  partitions.csv  sdkconfig.defaults
percussion-acoustic/dataset_collector/src/: audio_i2s.h  inputs.h  state_machine.c  storage_fat.h
percussion-acoustic/robot_device/: CMakeLists.txt  README.md
percussion-acoustic/robot_device/src/: CMakeLists.txt  audio_i2s.c  config.h  dsp_pipeline.c  dsp_pipeline.h  main.c  solenoid.c  state_machine.c  state_machine.h  uart_comm.c  uart_comm.h
percussion-acoustic/src/: CMakeLists.txt  config.h  dsp_pipeline.c  dsp_pipeline.h  idf_component.yml  inputs.c  led_status.c  led_status.h  main.c  solenoid.h  storage_fat.c  usb_msc.c  usb_msc.h
