<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panai_odometry</name>
  <version>0.1.0</version>
  <description>Odometry node for PanAI</description>
  <maintainer email="developer@todo.todo">Developer</maintainer>
  <license>Proprietary</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>panai_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
