<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panai_sim</name>
  <version>0.1.0</version>
  <description>PanAI Gazebo simulation</description>
  <maintainer email="developer@todo.todo">Developer</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>panai_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
