<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panai_vision</name>
  <version>0.1.0</version>
  <description>Vision wrapper for crack_scanner</description>
  <maintainer email="developer@todo.todo">Developer</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>panai_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
